tests/parsing/unterminated_hex_bit_string/stderr.golden
error: unterminated hex bit string, probably missing '"'
bus.fbd +2:25
   |
 2 | 	c config; init-value = x"1100; width = 64
   | 	                       ^^^^^^
